<resources>
    <string name="app_name">Todo</string>
    <string name="title">Jam Diary</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_up_text">아직 계정이 없다면? %s 하기</string>
    <string name="password">password</string>
    <string name="re_write_password">Rewrite password</string>
    <string name="email">email</string>
    <string name="nickname">nickname</string>
    <string name="hello_todoapp">Hello TodoApp</string>
</resources>